deploy package-image-uploader and wire it into local-worker
- includes some kbld fixes for local builds
- make package-image-uploader run as root to access nginx-written
  zipfiles. we might want to do some smart `chown`ing later
- create and mount secret for registry uploads

[finishes #173343000]

Co-authored-by: Connor Braa <cbraa@pivotal.io>
Co-authored-by: Piyali Banerjee <pbanerjee@pivotal.io>

--- a/dev-templates/kbld.yml
+++ b/dev-templates/kbld.yml
@@ -7,18 +7,20 @@ sources:
     path: #@ data.values.src_dirs.ccng
   - imageRepo: #@ data.values.kbld.destination.ccng
     path: #@ data.values.src_dirs.ccng
-  - imageRepo: cloudfoundry/capi-kpack-watcher
+  - imageRepo: cloudfoundry/cf-api-controllers
     path: #@ data.values.src_dirs.cf_api_controllers
-    pack: { build: { builder: gcr.io/paketo-buildpacks/builder:full-cf } }
+    pack: &packConfig
+      build:
+        builder: paketobuildpacks/builder:full
   - imageRepo: #@ data.values.kbld.destination.cf_api_controllers
     path: #@ data.values.src_dirs.cf_api_controllers
-    pack: { build: { builder: gcr.io/paketo-buildpacks/builder:full-cf } }
-  - imageRepo: gcr.io/cf-capi-arya/dev-package-image-uploader
+    pack: *packConfig
+  - imageRepo: cloudfoundry/cf-api-package-image-uploader
     path: #@ data.values.src_dirs.package_image_uploader
-    pack: { build: { builder: gcr.io/paketo-buildpacks/builder:full-cf } }
+    pack: *packConfig
   - imageRepo: #@ data.values.kbld.destination.package_image_uploader
     path: #@ data.values.src_dirs.package_image_uploader
-    pack: { build: { builder: gcr.io/paketo-buildpacks/builder:full-cf } }
+    pack: *packConfig
 ---
 apiVersion: kbld.k14s.io/v1alpha1
 kind: ImageDestinations
