hardcode `skip_cert_verify: false` on capi-k8s-release
- secure-by-default and most things are service-meshed anyways

[finishes #173974998]

Authored-by: Connor Braa <cbraa@pivotal.io>

--- a/templates/ccng-config.lib.yml
+++ b/templates/ccng-config.lib.yml
@@ -268,7 +268,7 @@ cc_service_key_client_secret: TODO
 allow_app_ssh_access: true
 default_app_ssh_access: true
 
-skip_cert_verify: true
+skip_cert_verify: false
 
 install_buildpacks: []
 
