--- a/templates/api_server_deployment.yml
+++ b/templates/api_server_deployment.yml
@@ -46,6 +46,8 @@ spec:
           - #@ template.replace(shared_config_volume_mounts())
           - name: server-sock
             mountPath: /data/cloud_controller_ng
+          - name: nginx-uploads
+            mountPath: /tmp/uploads
           #@ if/end data.values.uaa.serverCerts.secretName:
           - name: uaa-certs
             mountPath: /config/uaa/certs
