use /tmp/packages for package manipulation
- resource matching downloads files from the blobstore and
places them in a temporary directory before adding them to
the package zip
- on CF for VMs this was normally done in a separate directory
from where nginx was uploading files; this change introduces
a /tmp/packages directory that is shared between both the cf-api-local-worker
and package-image-uploader containers for this purpose

[#173343000](https://www.pivotaltracker.com/story/show/173343000)

Authored-by: Tim Downey <tdowney@vmware.com>

--- a/templates/api_server_deployment.yml
+++ b/templates/api_server_deployment.yml
@@ -76,6 +76,8 @@ spec:
           - #@ template.replace(shared_config_volume_mounts())
           - name: nginx-uploads
             mountPath: /tmp/uploads
+          - name: tmp-packages
+            mountPath: /tmp/packages
           #@ if/end data.values.ccdb.ca_cert:
           - name: database-ca-cert
             mountPath: /config/database/certs
@@ -88,8 +90,8 @@ spec:
             tcpSocket:
               port: 8080
           volumeMounts:
-          - name: nginx-uploads
-            mountPath: /tmp/uploads
+          - name: tmp-packages
+            mountPath: /tmp/packages
           env:
           - name: REGISTRY_USERNAME
             valueFrom:
@@ -148,5 +150,7 @@ spec:
         secret:
           secretName: database-ca-cert
       - name: nginx-uploads
+        emptyDir: {}
+      - name: tmp-packages
         emptyDir: {}
 
