--- a/templates/cc-kpack-registry-service-account.yml
+++ b/templates/cc-kpack-registry-service-account.yml
@@ -14,7 +14,7 @@ metadata:
   name: cc-kpack-registry-auth-secret
   namespace: #@ data.values.staging_namespace
   annotations:
-    build.pivotal.io/docker: #@ data.values.kpack.registry.hostname
+    kpack.io/docker: #@ data.values.kpack.registry.hostname
 type: kubernetes.io/basic-auth
 stringData:
   username: #@ data.values.kpack.registry.username
@@ -26,7 +26,7 @@ metadata:
   name: cc-package-registry-upload-secret
   namespace: #@ data.values.system_namespace
   annotations:
-    build.pivotal.io/docker: #@ data.values.kpack.registry.hostname
+    kpack.io/docker: #@ data.values.kpack.registry.hostname
 type: kubernetes.io/basic-auth
 stringData:
   username: #@ data.values.kpack.registry.username
