--- a/src/cf-api-controllers/test/fixtures/build.yaml
+++ b/src/cf-api-controllers/test/fixtures/build.yaml
@@ -3,28 +3,28 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: builds.build.pivotal.io
+  name: builds.kpack.io
 spec:
-  group: build.pivotal.io
+  group: kpack.io
   version: v1alpha1
   names:
     kind: Build
     singular: build
     plural: builds
     shortNames:
-    - cnbbuild
-    - cnbbuilds
-    - bld
-    - blds
+      - cnbbuild
+      - cnbbuilds
+      - bld
+      - blds
     categories:
-    - kpack
+      - kpack
   scope: Namespaced
   subresources:
     status: {}
   additionalPrinterColumns:
-  - name: Image
-    type: string
-    JSONPath: ".status.latestImage"
-  - name: Succeeded
-    type: string
-    JSONPath: ".status.conditions[?(@.type==\"Succeeded\")].status"
+    - name: Image
+      type: string
+      JSONPath: .status.latestImage
+    - name: Succeeded
+      type: string
+      JSONPath: .status.conditions[?(@.type=="Succeeded")].status
