--- a/src/cf-api-controllers/test/fixtures/image.yaml
+++ b/src/cf-api-controllers/test/fixtures/image.yaml
@@ -1,29 +1,30 @@
+# this is copied from kpack's release and is used in test
 ---
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: images.build.pivotal.io
+  name: images.kpack.io
 spec:
-  group: build.pivotal.io
+  group: kpack.io
   version: v1alpha1
   names:
     kind: Image
     singular: image
     plural: images
     shortNames:
-    - cnbimage
-    - cnbimages
-    - img
-    - imgs
+      - cnbimage
+      - cnbimages
+      - img
+      - imgs
     categories:
-    - kpack
+      - kpack
   scope: Namespaced
   subresources:
     status: {}
   additionalPrinterColumns:
-  - name: LatestImage
-    type: string
-    JSONPath: .status.latestImage
-  - name: Ready
-    type: string
-    JSONPath: .status.conditions[?(@.type=="Ready")].status
+    - name: LatestImage
+      type: string
+      JSONPath: .status.latestImage
+    - name: Ready
+      type: string
+      JSONPath: .status.conditions[?(@.type=="Ready")].status
