--- a/templates/deployment_updater_deployment.yml
+++ b/templates/deployment_updater_deployment.yml
@@ -37,8 +37,10 @@ spec:
             value: #@ ccng_secrets_mount_path
           resources:
             requests:
+              cpu: 300m
               memory: 300Mi
             limits:
+              cpu: 1000m
               memory: 1Gi
           readinessProbe:
             tcpSocket:
