use UAA token in CF API client for routes/space/domain
- adds weight support to Route translator
- use constants for Route label keys
- adds a sample RouteSync for manual testing

[#174502491](https://www.pivotaltracker.com/story/show/174502491)

Authored-by: Tim Downey <tdowney@vmware.com>

--- a/src/cf-api-controllers/config/crd/bases/apps.cloudfoundry.org_routesyncs.yaml
+++ b/src/cf-api-controllers/config/crd/bases/apps.cloudfoundry.org_routesyncs.yaml
@@ -36,11 +36,11 @@ spec:
         spec:
           description: RouteSyncSpec defines the desired state of RouteSync
           properties:
-            period:
+            period_seconds:
               format: int32
               type: integer
           required:
-          - period
+          - period_seconds
           type: object
         status:
           description: RouteSyncStatus defines the observed state of RouteSync
@@ -51,7 +51,7 @@ spec:
                 this file'
               items:
                 description: 'Loosely following this KEP: https://github.com/kubernetes/enhancements/tree/master/keps/sig-api-machinery/1623-standardize-conditions
-                  Eventually we can update to use standard types'
+                  Eventually we can update to use standard Kubernetes types'
                 properties:
                   lastTransitionTime:
                     format: date-time
