add RouteSync CRD and RBAC to templates
[#174502491](https://www.pivotaltracker.com/story/show/174502491)

Authored-by: Tim Downey <tdowney@vmware.com>

--- a/templates/cf-api-controllers-service-account.yml
+++ b/templates/cf-api-controllers-service-account.yml
@@ -49,6 +49,32 @@ roleRef:
   apiGroup: rbac.authorization.k8s.io
 ---
 apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: cf-api-controllers-service-account-routesyncs-admin
+subjects:
+  - kind: ServiceAccount
+    name: cf-api-controllers-service-account
+    namespace: #@ data.values.system_namespace
+roleRef:
+  kind: ClusterRole
+  name: "cf:routesyncs-admin"
+  apiGroup: rbac.authorization.k8s.io
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: cf-api-controllers-service-account-routes-admin
+subjects:
+  - kind: ServiceAccount
+    name: cf-api-controllers-service-account
+    namespace: #@ data.values.system_namespace
+roleRef:
+  kind: ClusterRole
+  name: "cf:routes-admin"
+  apiGroup: rbac.authorization.k8s.io
+---
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: "cf:kpack-builds-informer"
@@ -87,3 +113,30 @@ rules:
       - list
       - update
       - patch
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  creationTimestamp: null
+  name: "cf:routesyncs-admin"
+rules:
+  - apiGroups:
+      - apps.cloudfoundry.org
+    resources:
+      - routesyncs
+    verbs:
+      - create
+      - delete
+      - get
+      - list
+      - patch
+      - update
+      - watch
+  - apiGroups:
+      - apps.cloudfoundry.org
+    resources:
+      - routesyncs/status
+    verbs:
+      - get
+      - patch
+      - update
