--- a/templates/cf-api-server-service-account.yml
+++ b/templates/cf-api-server-service-account.yml
@@ -62,6 +62,8 @@ rules:
       - get
       - update
       - delete
+      - list
+      - watch
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
