Build CCNG image with paketo buildpacks
- Configure our dev scripts to build it using `pack`
- Update nginx Dockerfile to support the users/groups to match CNB ones that
the buildpacks create
- Stop running package-image-uploader container as root

Co-authored-by: Connor Braa <cbraa@pivotal.io>
Co-authored-by: Jaskanwal Pawar <jpawar@pivotal.io>

[finishes #174653760]

--- a/dev-templates/kbld.yml
+++ b/dev-templates/kbld.yml
@@ -5,8 +5,14 @@ kind: Sources
 sources:
   - imageRepo: cloudfoundry/cloud-controller-ng
     path: #@ data.values.src_dirs.ccng
+    pack: &ccngPackConfig
+      build:
+        builder: paketobuildpacks/builder:full
+        buildpacks:
+          - gcr.io/paketo-community/ruby
   - imageRepo: #@ data.values.kbld.destination.ccng
     path: #@ data.values.src_dirs.ccng
+    pack: *ccngPackConfig
   - imageRepo: cloudfoundry/cf-api-controllers
     path: #@ data.values.src_dirs.cf_api_controllers
     pack: &packConfig
