--- a/templates/clock_deployment.yml
+++ b/templates/clock_deployment.yml
@@ -27,9 +27,7 @@ spec:
         - name: cf-api-clock
           image: #@ data.values.images.ccng
           imagePullPolicy: Always
-          workingDir: "/cloud_controller_ng"
-          command: ["/usr/local/bin/bundle"]
-          args: ["exec", "rake", "clock:start"]
+          command: [ "/cnb/process/clock" ]
           env:
           - name: CLOUD_CONTROLLER_NG_CONFIG
             value: #@ ccng_config_mount_path
