--- a/templates/api_server_deployment.yml
+++ b/templates/api_server_deployment.yml
@@ -29,12 +29,12 @@ spec:
       containers:
         - name: cf-api-server
           image: #@ data.values.images.ccng
-          command:
-          - /cloud_controller_ng/bin/cloud_controller
-          - -c
-          - #@ ccng_config_mount_path
-          - -s
-          - #@ ccng_secrets_mount_path
+          command: [ "/cnb/process/web" ]
+          env:
+          - name: CLOUD_CONTROLLER_NG_CONFIG
+            value: #@ ccng_config_mount_path
+          - name: CLOUD_CONTROLLER_NG_SECRETS
+            value: #@ ccng_secrets_mount_path
           imagePullPolicy: Always
           resources:
             requests:
@@ -58,8 +58,7 @@ spec:
         - name: cf-api-local-worker
           image: #@ data.values.images.ccng
           imagePullPolicy: Always
-          command: ["/usr/local/bin/bundle"]
-          args: ["exec", "rake", "jobs:local"]
+          command: [ "/cnb/process/local-worker" ]
           env:
           - name: CLOUD_CONTROLLER_NG_CONFIG
             value: #@ ccng_config_mount_path
@@ -84,8 +83,6 @@ spec:
         - name: package-image-uploader
           image: #@ data.values.images.package_image_uploader
           imagePullPolicy: Always
-          securityContext:
-            runAsUser: 0
           readinessProbe:
             tcpSocket:
               port: 8080
