--- a/templates/worker_deployment.yml
+++ b/templates/worker_deployment.yml
@@ -23,9 +23,7 @@ spec:
         - name: cf-api-worker
           image: #@ data.values.images.ccng
           imagePullPolicy: Always
-          workingDir: "/cloud_controller_ng"
-          command: ["/usr/local/bin/bundle"]
-          args: ["exec", "rake", "jobs:generic"]
+          command: [ "/cnb/process/api-worker" ]
           env:
           - name: CLOUD_CONTROLLER_NG_CONFIG
             value: #@ ccng_config_mount_path
