--- a/templates/cf-api-controllers-service-account.yml
+++ b/templates/cf-api-controllers-service-account.yml
@@ -51,14 +51,14 @@ roleRef:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: cf-api-controllers-service-account-routesyncs-admin
+  name: cf-api-controllers-service-account-periodicsyncs-admin
 subjects:
   - kind: ServiceAccount
     name: cf-api-controllers-service-account
     namespace: #@ data.values.system_namespace
 roleRef:
   kind: ClusterRole
-  name: "cf:routesyncs-admin"
+  name: "cf:periodicsyncs-admin"
   apiGroup: rbac.authorization.k8s.io
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -118,12 +118,12 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   creationTimestamp: null
-  name: "cf:routesyncs-admin"
+  name: "cf:periodicsyncs-admin"
 rules:
   - apiGroups:
       - apps.cloudfoundry.org
     resources:
-      - routesyncs
+      - periodicsyncs
     verbs:
       - create
       - delete
@@ -135,7 +135,7 @@ rules:
   - apiGroups:
       - apps.cloudfoundry.org
     resources:
-      - routesyncs/status
+      - periodicsyncs/status
     verbs:
       - get
       - patch
