--- a/templates/periodic-route-sync.yml
+++ b/templates/periodic-route-sync.yml
@@ -2,7 +2,7 @@
 
 ---
 apiVersion: apps.cloudfoundry.org/v1alpha1
-kind: RouteSync
+kind: PeriodicSync
 metadata:
   name: cf-api-periodic-route-sync
   namespace: #@ data.values.system_namespace
