--- a/src/cf-api-controllers/Makefile
+++ b/src/cf-api-controllers/Makefile
@@ -45,7 +45,7 @@ vet:
 	go vet ./...
 
 manifests: controller-gen
-	$(CONTROLLER_GEN) $(CRD_OPTIONS) rbac:roleName=manager-role webhook paths="./..." output:crd:artifacts:config=config/crd/bases
+	$(CONTROLLER_GEN) $(CRD_OPTIONS) paths="./..." output:crd:artifacts:config=config/crd/bases
 
 # Generate code
 generate: controller-gen
