Make CC log level configurable
"info" remains the default level

[#172847921]

Co-authored-by: Matt Royal <mroyal@pivotal.io>
Co-authored-by: Piyali Banerjee <pbanerjee@pivotal.io>

--- a/templates/ccng-config.lib.yml
+++ b/templates/ccng-config.lib.yml
@@ -83,7 +83,7 @@ directories:
 logging:
   file: /dev/stdout
   syslog: vcap.cloud_controller_ng
-  level: "info"
+  level: #@ data.values.cc.log_level
   max_retries: 1
 
 logcache:
