--- a/templates/nginx-configmap.yml
+++ b/templates/nginx-configmap.yml
@@ -72,7 +72,7 @@ data:
       server {
           listen 9023;
 
-          location /internal/v4/ {
+          location /internal/ {
             access_log  /cloud_controller_ng/nginx-access.log;
             proxy_buffering             off;
             proxy_set_header            Host $host;
