--- a/templates/cc-kpack-registry-service-account.yml
+++ b/templates/cc-kpack-registry-service-account.yml
@@ -31,3 +31,14 @@ type: kubernetes.io/basic-auth
 stringData:
   username: #@ data.values.kpack.registry.username
   password: #@ data.values.kpack.registry.password
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: cc-app-registry-ca-cert
+  namespace: #@ data.values.system_namespace
+type: kubernetes.io/tls
+stringData:
+  ca.crt: #@ data.values.kpack.registry.ca
+  tls.crt: #@ data.values.kpack.registry.ca
+  tls.key: ""
