--- a/values/_default.yml
+++ b/values/_default.yml
@@ -25,12 +25,14 @@ eirini:
   serverCerts:
     secretName: null
 imagePullSecrets: null
+#! TODO: rename `kpack.registry` to `app.registry` or something similar?
 kpack:
   registry:
     hostname: ""
     password: ""
     repository_prefix: ""
     username: ""
+    ca: ""
 #! TODO: remove metric_proxy certs after PR to cf-for-k8s
 metric_proxy:
   ca:
