add minimum and recommended cli version for k8s
[finishes #174981838]

Co-authored-by: Sannidhi Jalukar <sjalukar@pivotal.io>
Co-authored-by: Connor Braa <cbraa@pivotal.io>

--- a/templates/ccng-config.lib.yml
+++ b/templates/ccng-config.lib.yml
@@ -72,8 +72,8 @@ info:
   app_ssh_endpoint: TODO.TODO
   app_ssh_host_key_fingerprint: "placeholder"
   app_ssh_oauth_client: "placeholder"
-  min_cli_version: ""
-  min_recommended_cli_version: ""
+  min_cli_version: "7.0.1"
+  min_recommended_cli_version: "7.0.1"
 
 
 directories:
