Use k8s secret for db_encryption_key and database_encryption
[#175067418]

Co-authored-by: Matt Royal <mroyal@pivotal.io>
Co-authored-by: Nat Bennett <nbennett@pivotal.io>

--- a/templates/ccng-config.lib.yml
+++ b/templates/ccng-config.lib.yml
@@ -220,11 +220,8 @@ buildpacks:
 
   fog_aws_storage_options: {}
 
-db_encryption_key: TODO
-
 database_encryption:
-  keys: {"encryption_key_0":"TODO"}
-  current_key_label: "encryption_key_0"
+  current_key_label: encryption_key_0
   pbkdf2_hmac_iterations: 2048
 
 disable_custom_buildpacks: true
