--- a/templates/secrets.lib.yml
+++ b/templates/secrets.lib.yml
@@ -10,6 +10,9 @@
 - name: cf-api-db-password
   secret:
     secretName: #@ data.values.ccdb.password_secret_name
+- name: cf-api-db-encryption-key
+  secret:
+    secretName: #@ data.values.ccdb.encryption_key_secret_name
 - name: cf-api-username-lookup-client-secret
   secret:
     secretName: #@ data.values.uaa.clients.cloud_controller_username_lookup.secret_name
@@ -22,7 +25,8 @@
 
 #@ ccng_config_mount_path = "/config/cloud_controller_ng.yml"
 #@ ccng_secrets_mount_path = "/config/secrets.yml"
-#@ ccdb_mount_path = "/etc/cf-api/ccdb"
+#@ ccdb_password_mount_path = "/etc/cf-api/ccdb_password"
+#@ ccdb_encryption_key_mount_path = "/etc/cf-api/ccdb_encryption_key"
 #@ cf_api_username_lookup_client_secret_mount_path = "/etc/cf-api/username-lookup-client-secret"
 #@ cf_api_blobstore_secret_access_key_mount_path = "/etc/cf-api/blobstore/secret-access-key"
 
@@ -40,7 +44,10 @@
 #! secrets for credentials used in config
 
 - name: cf-api-db-password
-  mountPath: #@ ccdb_mount_path
+  mountPath: #@ ccdb_password_mount_path
+
+- name: cf-api-db-encryption-key
+  mountPath: #@ ccdb_encryption_key_mount_path
 
 - name: cf-api-username-lookup-client-secret
   mountPath: #@ cf_api_username_lookup_client_secret_mount_path
@@ -55,7 +62,13 @@
 cloud_controller_username_lookup_client_secret:  #@ cf_api_username_lookup_client_secret_mount_path + "/password"
 db:
   database:
-    password: #@ ccdb_mount_path + "/password"
+    password: #@ ccdb_password_mount_path + "/password"
+
+db_encryption_key: #@ ccdb_encryption_key_mount_path + "/password"
+database_encryption:
+  keys:
+    encryption_key_0: #@ ccdb_encryption_key_mount_path + "/password"
+
 resource_pool:
   fog_connection:
     aws_secret_access_key: #@ cf_api_blobstore_secret_access_key_mount_path + "/password"
