add DELETE /images endpoint
- adds a DELETE `/images` endpoint which takes a body
containing the registry base path and an image reference
(image name + tag or digest)
- this endpoint will be invoked by the cf-api-server and cf-api-workers
whenever a package is deleted via the API or a cleanup job
- colocates the package-image-uploader with the cf-api-workers
Deployment since the endpoints are unauthenticated and are only
accessible over localhost

[#175080267](https://www.pivotaltracker.com/story/show/175080267)

Authored-by: Tim Downey <tdowney@vmware.com>

--- a/templates/worker_deployment.yml
+++ b/templates/worker_deployment.yml
@@ -48,6 +48,23 @@ spec:
           #@ if/end data.values.ccdb.ca_cert:
           - name: database-ca-cert
             mountPath: /config/database/certs
+        - name: package-image-uploader
+          image: #@ data.values.images.package_image_uploader
+          imagePullPolicy: Always
+          readinessProbe:
+            tcpSocket:
+              port: 8080
+          env:
+            - name: REGISTRY_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: cc-package-registry-upload-secret
+                  key: username
+            - name: REGISTRY_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: cc-package-registry-upload-secret
+                  key: password
       serviceAccountName: cf-api-worker-service-account
       volumes:
       - #@ template.replace(shared_config_volumes())
