add `temporary_disable_v2_staging` config
- Introduces a temporary config property called `temporary_disable_v2_staging`
that can be used to disable package staging through the v2 APIs.
- The property will be removed once the v2 APIs are fully disabled, hence the temporary_ prefix.

[finishes #175157530](https://www.pivotaltracker.com/story/show/175157530)

Authored-by: Tim Downey <tdowney@vmware.com>

--- a/templates/ccng-config.lib.yml
+++ b/templates/ccng-config.lib.yml
@@ -25,6 +25,7 @@ external_protocol: https
 external_domain: #@ "api.{}".format(data.values.system_domain)
 temporary_disable_deployments: false
 temporary_use_logcache: true
+temporary_disable_v2_staging: #@ data.values.temporary_disable_v2_staging
 
 system_domain_organization: system
 system_domain: #@ data.values.system_domain
