Revert "Rename package-image-uploader to registry-buddy"
This reverts commit 4535ac3656a967a77cd2f03bb73b1d38b368ae44.

--- a/dev-templates/_dev-values.yml
+++ b/dev-templates/_dev-values.yml
@@ -4,8 +4,8 @@ kbld:
   destination:
     ccng: ""
     cf_api_controllers: ""
-    registry_buddy: ""
+    package_image_uploader: ""
 src_dirs:
   ccng: ""
   cf_api_controllers: ""
-  registry_buddy: ""
+  package_image_uploader: ""
