Add "registry_buddy" config for CCNG
Will remove the old "package_image_uploader" config once CCNG uses the
new config key

[#175104686]

Authored-by: Matt Royal <mroyal@pivotal.io>

--- a/templates/ccng-config.lib.yml
+++ b/templates/ccng-config.lib.yml
@@ -190,9 +190,11 @@ packages:
     base_path: #@ data.values.kpack.registry.repository_prefix
   }
 
-package_image_uploader:
+registry_buddy: &registry-buddy-config
   host: 127.0.0.1
   port: 8080
+
+package_image_uploader: *registry-buddy-config
 
 droplets:
   droplet_directory_key: #@ data.values.blobstore.droplet_directory_key
