move main to support the Go buildpack
[#175080281]

Co-authored-by: Neil Hickey <nhickey@pivotal.io>
Co-authored-by: Tim Downey <tdowney@vmware.com>

--- a/src/backup-metadata/Makefile
+++ b/src/backup-metadata/Makefile
@@ -8,7 +8,7 @@ cf-metadata.tgz: bin/* config/*
 	cd .. ; tar -cf backup-metadata/cf-metadata.tgz backup-metadata/bin/* backup-metadata/config/*
 
 build: test-unit test-binary
-	go build -o backup-metadata cmd/main.go
+	go build -o backup-metadata main.go
 
 test-unit:
 	ginkgo -r internal 
