--- a/src/backup-metadata/Dockerfile
+++ b/src/backup-metadata/Dockerfile
@@ -10,7 +10,7 @@ COPY go.sum go.sum
 RUN go mod download
 
 # Copy the go source
-COPY cmd/main.go cmd/main.go
+COPY main.go main.go
 COPY internal/ internal/
 
 # Build
