update Procfile and backup command
- switches to use the "web" process to run the binary since the
Go buildpack has this command run it by default
- use sleep infinity instead of a while loop to avoid relying on bash

[#175080281]

Authored-by: Tim Downey <tdowney@vmware.com>

--- a/src/backup-metadata/config/cfmetadata.yml
+++ b/src/backup-metadata/config/cfmetadata.yml
@@ -18,7 +18,7 @@ spec:
       labels:
         app: cf-metadata
       annotations:
-        pre.hook.backup.velero.io/command: '["/bin/bash", "-c", "/cnb/process/generate-metadata"]'
+        pre.hook.backup.velero.io/command: '["/cnb/process/web"]' # `/cnb/process/web` runs the built binary
     spec:
       imagePullSecrets:
       - name: registry-credentials-cf-metadata
