--- a/src/backup-metadata/config/cfmetadata.yml
+++ b/src/backup-metadata/config/cfmetadata.yml
@@ -18,7 +18,7 @@ spec:
       labels:
         app: cf-metadata
       annotations:
-        pre.hook.backup.velero.io/command: '["/cnb/process/web"]' # `/cnb/process/web` runs the built binary
+        pre.hook.backup.velero.io/command: '["/cnb/process/generate-metadata"]'
     spec:
       imagePullSecrets:
       - name: registry-credentials-cf-metadata
