add cf_api_backup_metadata_generator UAA client
- this client will be used by the cf-api-backup-metadata-container
to scrape some metadata about the CF installation to include as
part of a Velero backup

[#175469923](https://www.pivotaltracker.com/story/show/175469923)

Authored-by: Tim Downey <tdowney@vmware.com>

--- a/values/_default.yml
+++ b/values/_default.yml
@@ -47,6 +47,8 @@ uaa:
   clients:
     cf_api_controllers:
       secret_name:
+    cf_api_backup_metadata_generator:
+      secret_name:
     cloud_controller_username_lookup:
       secret_name:
   serverCerts:
