use client auth instead of user auth with UAA
- this updates the CF client to use authenticate with UAA client
credentials instead of user auth
- renames environment variables to reflect this

[#175469923](https://www.pivotaltracker.com/story/show/175469923)

Authored-by: Tim Downey <tdowney@vmware.com>

--- a/src/backup-metadata/config/cfmetadata.yml
+++ b/src/backup-metadata/config/cfmetadata.yml
@@ -27,14 +27,14 @@ spec:
         name: cf-metadata
         command: ["/cnb/process/wait"]
         env:
-        - name: CF_API
+        - name: CF_API_HOST
           value: #@ data.values.cf.api
-        - name: CF_USER
+        - name: CF_CLIENT
           valueFrom:
             secretKeyRef:
               key: username
               name: cf-credentials-cf-metadata
-        - name: CF_PASSWORD
+        - name: CF_CLIENT_SECRET
           valueFrom:
             secretKeyRef:
               key: password
