--- a/dev-templates/_dev-values.yml
+++ b/dev-templates/_dev-values.yml
@@ -4,8 +4,10 @@ kbld:
   destination:
     ccng: ""
     cf_api_controllers: ""
+    backup_metadata: ""
     registry_buddy: ""
 src_dirs:
   ccng: ""
   cf_api_controllers: ""
+  backup_metadata: ""
   registry_buddy: ""
