make backup-metadata binary tests support client credentials
- this set of tests was missed in the previous commit to make
backup-metadata use UAA client credentials
- updates the Github Action to run these tests as well

[#175469923](https://www.pivotaltracker.com/story/show/175469923)

Authored-by: Tim Downey <tdowney@vmware.com>

--- a/.github/workflows/prs.yml
+++ b/.github/workflows/prs.yml
@@ -68,7 +68,7 @@ jobs:
       - name: Run unit tests
         run: |
           cd src/backup-metadata/
-          go test -v ./internal/...
+          go test -v ./internal/... ./test/binary/...
   template-tests:
     runs-on: ubuntu-latest
     container:
