add `app` label to Pod templates
- `app` is a frequently used label and this will make it easier
for operators to select our Pods along with other components

Authored-by: Tim Downey <tdowney@vmware.com>

--- a/templates/clock_deployment.yml
+++ b/templates/clock_deployment.yml
@@ -19,6 +19,7 @@ spec:
   template:
     metadata:
       labels:
+        app: cf-api-clock
         app.kubernetes.io/name: cf-api-clock
     spec:
       #@ if/end data.values.imagePullSecrets:
