--- a/templates/api_server_deployment.yml
+++ b/templates/api_server_deployment.yml
@@ -22,6 +22,7 @@ spec:
         prometheus.io/scrape: 'true'
         prometheus.io/port: '9102'
       labels:
+        app: cf-api-server
         app.kubernetes.io/name: cf-api-server
     spec:
       #@ if/end data.values.imagePullSecrets:
