use startupProbe instead of readinessProbe for rake-task based jobs
- these jobs briefly listen on a socket while starting up
but do not necessarily maintain that socket long-term
- these jobs run rake tasks that will crash when something goes wrong
so the regular liveness/readiness behavior of Kubernetes should suffice
- this was "working" previously because the readiness check probe was
connecting to the Istio sidecar instead of the rake task, we noticed
issues once switching to a non-mesh ingress solution (like Contour)
- addresses https://github.com/cloudfoundry/capi-k8s-release/issues/91

Authored-by: Tim Downey <tdowney@vmware.com>

[#175388005](https://www.pivotaltracker.com/story/show/175388005)

--- a/templates/deployment_updater_deployment.yml
+++ b/templates/deployment_updater_deployment.yml
@@ -29,6 +29,8 @@ spec:
           image: #@ data.values.images.ccng
           imagePullPolicy: Always
           command: [ "/cnb/process/deployment-updater" ]
+          ports:
+          - containerPort: 4445
           env:
           - name: CLOUD_CONTROLLER_NG_CONFIG
             value: #@ ccng_config_mount_path
@@ -41,7 +43,7 @@ spec:
             limits:
               cpu: 1000m
               memory: 1Gi
-          readinessProbe:
+          startupProbe:
             tcpSocket:
               port: 4445
             periodSeconds: 3
