--- a/templates/worker_deployment.yml
+++ b/templates/worker_deployment.yml
@@ -25,6 +25,8 @@ spec:
           image: #@ data.values.images.ccng
           imagePullPolicy: Always
           command: [ "/cnb/process/api-worker" ]
+          ports:
+          - containerPort: 4444
           env:
           - name: CLOUD_CONTROLLER_NG_CONFIG
             value: #@ ccng_config_mount_path
@@ -37,7 +39,7 @@ spec:
             limits:
               cpu: 1000m
               memory: 1Gi
-          readinessProbe:
+          startupProbe:
             tcpSocket:
               port: 4444
             periodSeconds: 3
@@ -52,9 +54,6 @@ spec:
         - name: registry-buddy
           image: #@ data.values.images.registry_buddy
           imagePullPolicy: Always
-          readinessProbe:
-            tcpSocket:
-              port: 8080
           env:
             - name: REGISTRY_USERNAME
               valueFrom:
